# epiworldPythonStreamlit

./: .gitignore  AGENTS.md  Containerfile  Cost of Measles Outbreak Calculator - 250808.xlsx  Makefile  README.md  app.py  config.yaml  plan.md  pyproject.toml  requirements.txt  tb_isolation.py
.devcontainer/: Containerfile  devcontainer.json  post-create.sh
.github/workflows/: containerfile.yml  copilot.yml  on_pr.yml
config/: app.yaml  global_defaults.yaml  paths.yaml
docs/: architecture.md  design-proposal.md  index.md
models/: measles_outbreak.py  tb_isolation.py  tb_isolation.yaml
sample/: Measles Outbreak.xlsx  TB Isolation.xlsx  ~$TB Isolation.xlsx
scripts/: build.py  build_index.py
src/epicc/: __main__.py
src/epicc/config/: __init__.py  default.yaml  schema.py
src/epicc/formats/: __init__.py  base.py  template.py  xlsx.py  yaml.py
src/epicc/model/: __init__.py  base.py  schema.py
src/epicc/models/: measles_outbreak.py  measles_outbreak.yaml  tb_isolation.py  tb_isolation.yaml
src/epicc/styles/: sidebar.css
src/epicc/utils/: excel_model_runner.py  export.py  model_loader.py  parameter_loader.py  parameter_ui.py  section_renderer.py
src/epicc/web/: sidebar.css
tests/: test_parameter_ui.py
tests/epicc/: test_formats.py  test_formats_template.py  test_formats_xlsx.py  test_formats_yaml.py  test_model_loader.py
utils/: excel_model_runner.py  model_loader.py  parameter_loader.py  parameter_ui.py  section_renderer.py
