[project]
name = "epiworld-python-streamlit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.55.0",
    "pandas>=2.3.0",
    "numpy>=2.4.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.12.5",
    "ruamel-yaml>=0.19.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
