[project]
name = "epiworld-python-streamlit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.55.0",
    "pandas>=2.3.0",
    "numpy>=2.4.0",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pandas-stubs",
    "types-openpyxl",
    "types-PyYAML",
]
